increase minimum width of project figures from 325px to 350px to prevent the brew ratio overlay links from getting cut off

--- a/style.css
+++ b/style.css
@@ -187,7 +187,7 @@ div.project-gallery {
 article.project {
     width: 33%;
     max-width: 450px;
-    min-width: 325px;
+    min-width: 350px;
     margin: 0;
     margin-top: 2em;
     padding: 1em;   
